k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-greenapi-int-clusterip-service
spec:
  type: ClusterIP
  selector: 
    app: nginx-greenapi-int
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
